--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Instructor: Washington Valencia
 
             <!-- Add more contacts dynamically -->
             <ul class="list-group" id="contactList">
-                <li class="list-group-item">
+                <!--<li class="list-group-item">
                     Maxwell Wright / (0191) 719 6495 / agent1.@cctb.ca
                 </li>
                 <li class="list-group-item">
@@ -64,7 +64,7 @@ Instructor: Washington Valencia
                 </li>
                 <li class="list-group-item">
                     Helen Richards / (0191) 0800 1111 / agent3.@cctb.ca
-                </li>
+                </li>-->
             </ul>
 
         </div>
